<resources>
    <string name="app_name">Skills</string>
    <string name="first_name">First Name*</string>
    <string name="last_name">Last Name*</string>
    <string name="address">Address*</string>
    <string name="state">State*</string>
    <string name="pin_code">Pin Code*</string>

    <string name="first_name_hint">Enter First Name</string>
    <string name="last_name_hint">Enter Last Name</string>
    <string name="address_hint">Enter Address</string>
    <string name="state_hint">Enter State</string>
    <string name="pin_code_hint">Enter Pin Code</string>

    <string name="error_msg">Its Mandatory field</string>

    <string name="next">Next</string>
    <string name="previous">Previous</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
