<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/registrationBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.registrationForms.NameDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <!-- address-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_address"
            style="@style/registrationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/address"
            app:errorEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/address_hint" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- state-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_state"
            style="@style/registrationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/state">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_state"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/state_hint" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- pincode-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_pin_code"
            style="@style/registrationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pin_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_pin_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pin_code_hint"
                android:inputType="number" />
        </com.google.android.material.textfield.TextInputLayout>

    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/previous"
            style="@style/whiteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:text="@string/previous" />

        <Button
            android:id="@+id/next"
            style="@style/whiteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/next" />
    </RelativeLayout>
</FrameLayout>