<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/registrationBg"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.registration.registrationForms.NameDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="20dp"
        android:orientation="vertical">
        <!-- first name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_first_name"
            style="@style/registrationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/first_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/first_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- last name-->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/tv_last_name"
            style="@style/registrationLabel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/last_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/last_name_hint" />
        </com.google.android.material.textfield.TextInputLayout>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/next"
            style="@style/whiteBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:text="@string/next" />
    </RelativeLayout>
</FrameLayout>